# messengergpt

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  sample_data.json
.github/workflows/: docker-publish.yml
src/: main.rs  types.rs
